--- a/app/src/main/res/layout/activity_doctor_register.xml
+++ b/app/src/main/res/layout/activity_doctor_register.xml
@@ -40,17 +40,18 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="64dp"
         android:background="#FFFFFF"
         android:ems="10"
         android:fontFamily="@font/baloo"
-        android:hint="Adınız"
+        android:hint="Nombre"
         android:inputType="none"
         android:padding="5dp"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -64,7 +65,7 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:fontFamily="@font/baloo"
-        android:hint="Soyadınız"
+        android:hint="Apellido"
         android:inputType="none"
         android:padding="5dp"
         android:textColor="#000000"
@@ -83,7 +84,7 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:fontFamily="@font/baloo"
-        android:hint="Emailiniz (@doctor)"
+        android:hint="Mail (@doctor)"
         android:inputType="textLongMessage"
         android:padding="5dp"
         android:textColor="#000000"
@@ -103,7 +104,7 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:fontFamily="@font/baloo"
-        android:hint="Şifreniz"
+        android:hint="Contraseña"
         android:inputType="number"
         android:padding="5dp"
         android:textColor="#000000"
@@ -123,7 +124,7 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:fontFamily="@font/baloo"
-        android:hint="Yaşınız"
+        android:hint="Edad"
         android:inputType="number"
         android:padding="5dp"
         android:textColor="#000000"
