--- a/app/src/main/res/layout/activity_patient_register.xml
+++ b/app/src/main/res/layout/activity_patient_register.xml
@@ -45,7 +45,7 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:fontFamily="@font/baloo"
-        android:hint="İsminiz"
+        android:hint="Nombre"
         android:inputType="none"
         android:padding="5dp"
         android:textColor="#000000"
@@ -62,7 +62,7 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:fontFamily="@font/baloo"
-        android:hint="Soy İsminiz"
+        android:hint="Apellido"
         android:inputType="none"
         android:padding="5dp"
         android:textColor="#000000"
@@ -79,7 +79,7 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:fontFamily="@font/baloo"
-        android:hint="Emailiniz (@patient)"
+        android:hint="Mail (@patient)"
         android:inputType="textLongMessage"
         android:padding="5dp"
         android:textColor="#000000"
@@ -97,7 +97,7 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:fontFamily="@font/baloo"
-        android:hint="Şifreniz"
+        android:hint="Contraseña"
         android:inputType="number"
         android:padding="5dp"
         android:textColor="#000000"
@@ -115,7 +115,7 @@
         android:background="#FFFFFF"
         android:ems="10"
         android:fontFamily="@font/baloo"
-        android:hint="Yaşınız"
+        android:hint="Edad"
         android:inputType="number"
         android:padding="5dp"
         android:textColor="#000000"
