traducciones completas (creo)

--- a/app/src/main/res/layout/activity_doctor_homepage.xml
+++ b/app/src/main/res/layout/activity_doctor_homepage.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="64dp"
         android:fontFamily="@font/baloo"
-        android:text="HASTALARIM"
+        android:text="Mis Pacientes"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
