--- a/app/src/main/res/layout/custom_doctor_appointment.xml
+++ b/app/src/main/res/layout/custom_doctor_appointment.xml
@@ -31,7 +31,7 @@
             android:layout_marginLeft="13dp"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/baloo"
-            android:text="Hasta ismi"
+            android:text="Nombre del paciente"
             android:textColor="@color/koyu_yesil"
             android:textSize="18sp" />
 
@@ -42,7 +42,7 @@
             android:layout_marginLeft="13dp"
             android:layout_marginTop="3dp"
             android:fontFamily="@font/baloo"
-            android:text="Saat"
+            android:text="Hora"
             android:textColor="@color/black" />
 
         <TextView
@@ -52,7 +52,7 @@
             android:layout_marginLeft="13dp"
             android:layout_marginTop="3dp"
             android:fontFamily="@font/baloo"
-            android:text="Tarih"
+            android:text="Fecha"
             android:textColor="@color/black" />
 
         <TextView
@@ -62,7 +62,7 @@
             android:layout_marginLeft="13dp"
             android:layout_marginTop="3dp"
             android:fontFamily="@font/baloo"
-            android:text="Not"
+            android:text="Notas"
             android:textColor="@color/black" />
     </LinearLayout>
 </LinearLayout>
