--- a/app/src/main/res/layout/activity_appointment.xml
+++ b/app/src/main/res/layout/activity_appointment.xml
@@ -40,7 +40,7 @@
             android:background="#FFFFFF"
             android:fontFamily="@font/baloo"
             android:padding="10dp"
-            android:text="Name"
+            android:text="Nombre"
             android:textColor="#000000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
             android:background="#FFFFFF"
             android:fontFamily="@font/baloo"
             android:padding="10dp"
-            android:text="Surname"
+            android:text="Apellido"
             android:textColor="#000000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +76,7 @@
             android:background="#FFFFFF"
             android:fontFamily="@font/baloo"
             android:padding="10dp"
-            android:text="Age"
+            android:text="Edad"
             android:textColor="#000000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -94,7 +94,7 @@
             android:background="#FFFFFF"
             android:fontFamily="@font/baloo"
             android:padding="10dp"
-            android:text="Field"
+            android:text="Area"
             android:textColor="#000000"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +124,7 @@
                 android:ems="10"
                 android:fontFamily="@font/baloo"
                 android:gravity="top"
-                android:hint="Notunuzu giriniz."
+                android:hint="Ingrese una nota..."
                 android:inputType="textMultiLine"
                 android:maxLines="5"
                 android:singleLine="false"
@@ -141,7 +141,7 @@
             android:background="#FFFFFF"
             android:fontFamily="@font/baloo"
             android:padding="5dp"
-            android:text="Seçilmiş Saat"
+            android:text="Hora seleccionada"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -155,7 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:fontFamily="@font/baloo"
-            android:text="Randevu Al"
+            android:text="Solicitar cita"
             app:icon="@drawable/ic_savebutton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/materialCardView" />
