--- a/app/src/main/res/layout/activity_doctor_login.xml
+++ b/app/src/main/res/layout/activity_doctor_login.xml
@@ -62,14 +62,15 @@
 
     <Button
         android:id="@+id/btnDoctorLogin"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content"
+        android:layout_width="151dp"
+        android:layout_height="59dp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="96dp"
         android:layout_marginEnd="30dp"
         android:text="@string/login"
         app:icon="@drawable/ic_login"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/editTxtDoctorLPassword"
         app:layout_constraintTop_toBottomOf="@+id/editTxtDoctorLPassword" />
 
