--- a/app/src/main/res/layout/activity_doctor_profile.xml
+++ b/app/src/main/res/layout/activity_doctor_profile.xml
@@ -27,7 +27,7 @@
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
         android:padding="8dp"
-        android:text="İsim: "
+        android:text="Nombre: "
         android:textAlignment="viewStart"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -45,7 +45,7 @@
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
         android:padding="8dp"
-        android:text="Soyisim: "
+        android:text="Apellido: "
         android:textAlignment="viewStart"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -63,7 +63,7 @@
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
         android:padding="8dp"
-        android:text="Yaş: "
+        android:text="Edad: "
         android:textAlignment="viewStart"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -99,7 +99,7 @@
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
         android:padding="8dp"
-        android:text="Uzmanlık Alanı: "
+        android:text="Especialidad: "
         android:textAlignment="viewStart"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -115,7 +115,7 @@
         android:layout_marginEnd="48dp"
         android:backgroundTint="#E53935"
         android:fontFamily="@font/baloo"
-        android:text="Hesabı Sil"
+        android:text="Eliminar cuenta"
         app:icon="@drawable/ic_delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDField" />
@@ -128,7 +128,7 @@
         android:layout_marginTop="30dp"
         android:backgroundTint="#254CD8"
         android:fontFamily="@font/baloo"
-        android:text="Düzenle"
+        android:text="Editar"
         app:icon="@drawable/ic_editbutton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDField" />
