--- a/app/src/main/res/layout/activity_doctor_profile_edit.xml
+++ b/app/src/main/res/layout/activity_doctor_profile_edit.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="İsim: "
+        android:hint="Nombre: "
         android:padding="8dp"
         android:textAlignment="viewStart"
         android:textColor="#000000"
@@ -45,7 +45,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="Soyisim: "
+        android:hint="Apellido: "
         android:padding="8dp"
         android:textAlignment="viewStart"
         android:textColor="#000000"
@@ -63,7 +63,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="Yaş: "
+        android:hint="Edad: "
         android:padding="8dp"
         android:textAlignment="viewStart"
         android:textColor="#000000"
@@ -81,7 +81,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="Eski Şifre"
+        android:hint="Contraseña actual"
         android:inputType="textPassword"
         android:padding="8dp"
         android:textAlignment="viewStart"
@@ -101,7 +101,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="Yeni Şifre"
+        android:hint="Nueva contraseña"
         android:inputType="textPassword"
         android:padding="8dp"
         android:textAlignment="viewStart"
@@ -133,7 +133,7 @@
         android:layout_marginEnd="64dp"
         android:backgroundTint="#254CD8"
         android:fontFamily="@font/baloo"
-        android:text="Save"
+        android:text="Guardar"
         android:textAlignment="center"
         app:icon="@drawable/ic_savebutton"
         app:layout_constraintEnd_toEndOf="parent"
