--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:layout_marginBottom="100dp"
         android:fontFamily="@font/baloo"
         android:padding="8dp"
-        android:text="MedMobile"
+        android:text="Psiconnect"
         android:textAlignment="center"
         android:textColor="#009688"
         android:textSize="48sp"
