--- a/app/src/main/res/layout/activity_patient_home_page.xml
+++ b/app/src/main/res/layout/activity_patient_home_page.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="64dp"
         android:fontFamily="@font/baloo"
-        android:text="DOKTORLARIMIZ"
+        android:text="Profesionales disponible"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
