--- a/app/src/main/res/layout/activity_patient_login.xml
+++ b/app/src/main/res/layout/activity_patient_login.xml
@@ -65,11 +65,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="200dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="30dp"
         android:text="@string/login"
         app:icon="@drawable/ic_login"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/editTxtDoctorLPassword"
         app:layout_constraintTop_toBottomOf="@+id/editTxtDoctorLPassword" />
 
