--- a/app/src/main/res/layout/activity_patient_my_appointments.xml
+++ b/app/src/main/res/layout/activity_patient_my_appointments.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="64dp"
         android:fontFamily="@font/baloo"
-        android:text="RANDEVULARIM"
+        android:text="MIS CITAS"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
