--- a/app/src/main/res/layout/activity_patient_profile_edit.xml
+++ b/app/src/main/res/layout/activity_patient_profile_edit.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="İsim: "
+        android:hint="Nombre: "
         android:padding="8dp"
         android:textAlignment="viewStart"
         android:textColor="#000000"
@@ -45,7 +45,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="Soyisim: "
+        android:hint="Apellido: "
         android:padding="8dp"
         android:textAlignment="viewStart"
         android:textColor="#000000"
@@ -63,7 +63,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="Yaş: "
+        android:hint="Edad: "
         android:padding="8dp"
         android:textAlignment="viewStart"
         android:textColor="#000000"
@@ -81,7 +81,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="Eski Şifre"
+        android:hint="Contraseña actual"
         android:inputType="textPassword"
         android:padding="8dp"
         android:textAlignment="viewStart"
@@ -100,7 +100,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="Yeni Şifre"
+        android:hint="Nueva contraseña"
         android:inputType="textPassword"
         android:padding="8dp"
         android:textAlignment="viewStart"
