--- a/app/src/main/res/layout/custom_doctor_list.xml
+++ b/app/src/main/res/layout/custom_doctor_list.xml
@@ -33,7 +33,7 @@
             android:layout_marginTop="7dp"
             android:background="@color/white"
             android:fontFamily="@font/baloo"
-            android:text="Ad"
+            android:text="Nombre"
             android:textColor="#7E57C2"
             android:textSize="20sp" />
 
@@ -45,7 +45,7 @@
             android:layout_marginTop="3dp"
             android:background="#FFFFFF"
             android:fontFamily="@font/baloo"
-            android:text="Yaş"
+            android:text="Edad"
             android:textColor="#000000"
             android:textSize="17sp" />
 
@@ -57,7 +57,7 @@
             android:layout_marginTop="2dp"
             android:background="#FFFFFF"
             android:fontFamily="@font/baloo"
-            android:text="Çalışma Alanı"
+            android:text="Especialidad"
             android:textColor="#000000"
             android:textSize="12sp" />
     </LinearLayout>
