--- a/app/src/main/res/layout/activity_doctor_profile.xml
+++ b/app/src/main/res/layout/activity_doctor_profile.xml
@@ -27,7 +27,7 @@
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
         android:padding="8dp"
-        android:text="Nombre: "
+        android:text="Nombre Luka: "
         android:textAlignment="viewStart"
         android:textColor="#000000"
         android:textSize="20sp"
