--- a/app/src/main/res/layout/activity_doctor_profile_edit.xml
+++ b/app/src/main/res/layout/activity_doctor_profile_edit.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="50dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/baloo"
-        android:hint="Nombre: "
+        android:hint="Nombre Luka: "
         android:padding="8dp"
         android:textAlignment="viewStart"
         android:textColor="#000000"
