--- a/app/src/main/res/layout/activity_patient_login.xml
+++ b/app/src/main/res/layout/activity_patient_login.xml
@@ -54,7 +54,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="200dp"
-        android:text="@string/register"
+        android:text="@string/registro"
         app:icon="@drawable/ic_register"
         app:layout_constraintEnd_toEndOf="@+id/editTxtDoctorLPassword"
         app:layout_constraintStart_toStartOf="parent"
