--- a/app/src/main/res/layout/activity_patient_register.xml
+++ b/app/src/main/res/layout/activity_patient_register.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="10dp"
         android:fontFamily="@font/baloo"
         android:padding="5dp"
-        android:text="@string/register"
+        android:text="@string/registro"
         android:textColor="#000000"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
