--- a/app/src/main/res/menu/patient_menu.xml
+++ b/app/src/main/res/menu/patient_menu.xml
@@ -9,21 +9,15 @@
         android:title="appointments"
         app:showAsAction="always" />
     <item
-        android:id="@+id/news"
-        android:icon="@drawable/ic_news"
-        android:orderInCategory="6"
-        android:title="@string/news"
-        app:showAsAction="always" />
-    <item
         android:id="@+id/profile"
         android:icon="@drawable/ic_profil"
         android:orderInCategory="7"
-        android:title="@string/profile"
+        android:title="@string/perfil"
         app:showAsAction="always" />
     <item
         android:id="@+id/logout"
         android:icon="@drawable/ic_logout"
         android:orderInCategory="8"
-        android:title="@string/logout"
+        android:title="@string/cerrar_sesion"
         app:showAsAction="always" />
 </menu>
