cambios esteticos y funcionalidades de inputs 29/01 20:20

--- a/app/src/main/res/layout/activity_appointment.xml
+++ b/app/src/main/res/layout/activity_appointment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/koyu_yesil"
+    android:background="@color/verde_oscuro"
     android:padding="5dp"
     tools:context=".patient.AppointmentActivity"
     tools:layout_editor_absoluteX="1dp"
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/koyu_yesil">
+        android:background="@color/verde_oscuro">
 
         <!-- ImageView -->
         <ImageView
