--- a/app/src/main/res/layout/activity_doctor_homepage.xml
+++ b/app/src/main/res/layout/activity_doctor_homepage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mor"
+    android:background="@color/verde_oscuro"
     android:textAlignment="center"
     tools:context=".doctor.DoctorHomepageActivity">
 
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:background="@color/mor"
+        android:background="@color/celeste"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
