--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,12 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="koyu_yesil">#009688</color>
+    <color name="grey">#2F4358</color>
+    <color name="verde_oscuro">#01282D</color>
     <color name="acik_mavi">#E3F2FD</color>
     <color name="acik_yesil">#B2DFDB</color>
     <color name="orta_Yesil">#75B59E</color>
-    <color name="mor">#484264</color>
+    <color name="celeste">#CAEBF8</color>
+    <color name="white">#FFFFFF</color>
+    <color name="your_color">#FD00AC</color>
 </resources>
