reparacion de funcion de creacion de AppointmentActivity

--- a/app/src/main/res/layout/activity_doctor_register.xml
+++ b/app/src/main/res/layout/activity_doctor_register.xml
@@ -135,7 +135,7 @@
             android:ems="10"
             android:fontFamily="@font/baloo"
             android:hint="Contraseña"
-            android:inputType="number"
+            android:inputType="textPassword"
             android:padding="5dp"
             android:textColor="#000000"
             android:textSize="20sp"
@@ -155,7 +155,7 @@
             android:ems="10"
             android:fontFamily="@font/baloo"
             android:hint="Licencia nacional (MN-)"
-            android:inputType="text"
+            android:inputType="number"
             android:padding="5dp"
             android:textColor="#000000"
             android:textSize="20sp"
