--- a/app/src/main/res/layout/activity_doctor_login.xml
+++ b/app/src/main/res/layout/activity_doctor_login.xml
@@ -38,7 +38,7 @@
         android:ems="10"
         android:fontFamily="@font/baloo"
         android:hint="@string/password"
-        android:inputType="number"
+        android:inputType="textPassword"
         android:padding="5dp"
         android:textColor="#000000"
         android:textSize="20sp"
