mas seguridad en las contraseñas

--- a/app/src/main/res/layout/activity_patient_register.xml
+++ b/app/src/main/res/layout/activity_patient_register.xml
@@ -84,7 +84,7 @@
         android:ems="10"
         android:fontFamily="@font/baloo"
         android:hint="Contraseña"
-        android:inputType="number"
+        android:inputType="textPassword"
         android:padding="5dp"
         android:textColor="#000000"
         android:textSize="20sp"
