--- a/app/src/main/res/layout/activity_doctor_login.xml
+++ b/app/src/main/res/layout/activity_doctor_login.xml
@@ -49,11 +49,11 @@
 
     <Button
         android:id="@+id/btnDoctorRegister"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="180dp"
+        android:layout_marginTop="125dp"
+        android:layout_marginEnd="10dp"
         android:text="@string/registro"
         app:icon="@drawable/ic_register"
         app:layout_constraintEnd_toEndOf="@+id/editTxtDoctorLPassword"
@@ -62,16 +62,15 @@
 
     <Button
         android:id="@+id/btnDoctorLogin"
-        android:layout_width="130dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="30dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="10dp"
         android:text="@string/login"
         app:icon="@drawable/ic_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/editTxtDoctorLPassword"
+        app:layout_constraintEnd_toEndOf="@+id/editTxtDoctorLPassword"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTxtDoctorLPassword" />
 
     <TextView
